--- a/lol定位/lol定位.html
+++ b/lol定位/lol定位.html
@@ -240,6 +240,7 @@
     </style>
 </head>
 <body>
+    <h1>王者荣耀</h1>
     <div class="box">
         <div class="wenzi1">
             【神剑】6剑士3奥德赛2星神
